@@ -3,11 +3,14 @@
 					**************************
 					
 					Changes in MPTinR Version 0.9.x
-					Released July 2012
+					Released July - ... 2012
 
 	Significant User Visible Changes and new Features
 	
 	o	added functions gen.data and gen.predictionsfor generating data and predictions.
+	
+	o	coments in model and restrictions files are now treated as in R:
+		Everything to the right of a # is ignored and NOT the whole line!
 	
 	o	MPTinR is now byte compiled.
 	
@@ -22,7 +25,7 @@
 					**************************
 					
 					Changes in MPTinR Version 0.8.x
-					Released February 2012
+					Released February - May 2012
 
 	Significant User Visible Changes and new Features
 	
